--- a/index.html
+++ b/index.html
@@ -96,9 +96,9 @@
     </tr>
   </table>
   <hr>
-  <a href="hobbies.html">My Hobbies</a>
-  <a href="Get ahold of me.html">Get Ahold of Me</a>
-  <a href="inputs.html">Inputs Sheet</a>
+  <a href="hobbies.html">My Hobbies</a><br>
+  <a href="Get ahold of me.html">Get Ahold of Me</a><br>
+  <a href="inputs.html">Inputs Sheet</a><br>
 </body>
 
 </html>
