--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="images/angel.jpg" alt="Angel profile picture"></td>
+      <td><img src="https://media-exp1.licdn.com/dms/image/C5603AQEhDzak3kqMYQ/profile-displayphoto-shrink_200_200/0/1559770171743?e=1640217600&v=beta&t=8huJI1ga3G8YgEY9dD6YRY1iz1hgmBYLbO-6tTiOBZo" alt="Angel profile picture"></td>
       <td>
         <h1>Angel Saenz</h1>
         <p><em><a href="https://www.merriam-webster.com/dictionary/greenhorn">GreenHorn</a> <strong>Programmer</strong>.</em></p>
